# interview_rag

./: .env.example  .gitignore  FOLLOWUP.md  README.md  exam_工作方式确认题.md  exam_补充确认题.md  pyproject.toml
src/: config.py  main.py  models.py
src/agent/: generator.py  prompts.py  validator.py
src/data/: test_questions.json
src/ingestion/: indexer.py  loader.py  parser.py  splitter.py
src/retrieval/: query_analyzer.py  reranker.py  retriever.py
tests/: conftest.py  fixtures.py  test_agent.py  test_ingestion.py  test_retrieval.py
