[project]
name = "interview-rag"
version = "0.1.0"
description = "Intelligent Document Q&A Agent - RAG system for scanned PDF documents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "openai>=1.30.0",
    "scikit-learn>=1.3.0",
    "faiss-cpu>=1.9.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "mistletoe>=1.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "paddlepaddle>=3.3.1",
    "paddleocr>=3.5.0",
    "FlagEmbedding>=1.3.5",
]

[project.optional-dependencies]
# MinerU: scanned PDF to structured Markdown
# System deps: brew install libreoffice
# Post-install: mineru-models-download
#   uv sync --extra mineru
mineru = [
    "mineru[core]>=3.0.0",
    "modelscope",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
